--- a/NetworkMember-view/package.json
+++ b/NetworkMember-view/package.json
@@ -13,7 +13,9 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "element-ui": "^2.13.1",
+    "iview": "^1.0.1",
     "jquery": "^3.5.0",
+    "js-cookie": "^2.2.1",
     "popper.js": "^1.16.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
