--- a/NetworkMember-view/package.json
+++ b/NetworkMember-view/package.json
@@ -12,13 +12,17 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "crypto-js": "^4.0.0",
     "element-ui": "^2.13.1",
     "iview": "^1.0.1",
     "jquery": "^3.5.0",
     "js-cookie": "^2.2.1",
+    "node-rsa": "^1.0.8",
     "popper.js": "^1.16.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-axios": "^2.1.5",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
