--- a/NetworkMember-view/package.json
+++ b/NetworkMember-view/package.json
@@ -21,6 +21,7 @@
     "popper.js": "^1.16.1",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.5",
+    "vue-i18n": "^8.17.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.2.0"
   },
