--- a/NetworkMember-view/package.json
+++ b/NetworkMember-view/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "crypto-js": "^4.0.0",
+    "echarts": "^4.7.0",
     "element-ui": "^2.13.1",
     "iview": "^1.0.1",
     "jquery": "^3.5.0",
